--- a/public/profile.html
+++ b/public/profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta property="og:image" content="images/logo.png">
     <link rel="stylesheet" href="profile-page.css">
-    <link rel="stylesheet" href="auto-show.css">
+    <link rel="stylesheet" href="./auto-show.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
@@ -102,13 +102,13 @@
             <div class="profile-info">
                 <label for="username">Username:</label>
                 <div id="username-container">
-                    <input type="text" id="username" value="deni">
+                    <input type="text" id="username" value="">
                     <button type="submit" id="change-username" style="display: none;">Save</button>
                     <button type="submit" id="cancel" style="display: none;">Cancel</button>
                 </div>
                 <label for="email">Email:</label>
                 <div id="email-container">
-                    <input type="email" id="email" value="deni@abvv.bg">
+                    <input type="email" id="email" value="">
                     <button type="submit" id="change-email" style="display: none;">Save</button>
                     <button type="submit" id="cancel-email" style="display: none;">Cancel</button>
                 </div>
