--- a/public/profile.html
+++ b/public/profile.html
@@ -152,11 +152,11 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="getProfileData.js"></script>
-    <script src="Password-Changing.js"></script>
-    <script src="Password-Eye-Visibility.js"></script>
-    <script src="Change-User-Details.js"></script>
-    <script src="Change-User-Password.js"></script>
+    <script src="getProfileData.js" defer></script>
+    <script src="Password-Changing.js" defer></script>
+    <script src="Password-Eye-Visibility.js" defer></script>
+    <script src="Change-User-Details.js" defer></script>
+    <script src="Change-User-Password.js" defer></script>
 </body>
 
 </html>
