--- a/public/profile.html
+++ b/public/profile.html
@@ -89,9 +89,9 @@
             <div id="popup-changeUsername">
                 <p id="warning-fields-username"></p>
                 <p>Please enter your password</p>
-                <input type="password" id="password">
-                <span><i class="toggle-password fas fa-eye" onclick="togglePasswordVisibility()"
-                        id="password-eye"></i></span>
+                <input type="password" id="password-overlay">
+                <span><i class="toggle-password fas fa-eye" onclick="togglePasswordVisibilityOverlayPass()"
+                        id="password-eye-overlay"></i></span>
                 <button id="remove-btn-changeUsername">Change Username</button>
                 <button id="close-changeUsername" onclick="closePopupChangeUsername()">Cancel</button>
             </div>
