--- a/public/profile.html
+++ b/public/profile.html
@@ -102,13 +102,13 @@
             <div class="profile-info">
                 <label for="username">Username:</label>
                 <div id="username-container">
-                    <input type="text" id="username" value="">
+                    <input type="text" id="username" value="" autocomplete="new-username">
                     <button type="submit" id="change-username" style="display: none;">Save</button>
                     <button type="submit" id="cancel" style="display: none;">Cancel</button>
                 </div>
                 <label for="email">Email:</label>
                 <div id="email-container">
-                    <input type="email" id="email" value="">
+                    <input type="email" id="email" value="" autocomplete="new-email">
                     <button type="submit" id="change-email" style="display: none;">Save</button>
                     <button type="submit" id="cancel-email" style="display: none;">Cancel</button>
                 </div>
