Added change email function

--- a/public/profile.html
+++ b/public/profile.html
@@ -112,6 +112,7 @@
                     <button type="submit" id="change-email" style="display: none;">Save</button>
                     <button type="submit" id="cancel-email" style="display: none;">Cancel</button>
                 </div>
+                <span id="changed-email"></span>
                 <div class="profile-password">
                     <div>
                         <label for="password">Change Password:</label>
