Changed the style of the profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -116,9 +116,12 @@
                 <div class="profile-password">
                     <div>
                         <label for="password">Change Password:</label>
-                        <input type="password" id="password" value="" placeholder="enter current password" autocomplete="new-password">
-                        <input type="password" id="new-password" placeholder="enter a new password" autocomplete="new-password">
-                        <input type="password" id="repeat-new-password" placeholder="enter the new password again" autocomplete="new-password">
+                        <input type="password" id="password" value="" placeholder="enter current password"
+                            autocomplete="new-password">
+                        <input type="password" id="new-password" placeholder="enter a new password"
+                            autocomplete="new-password">
+                        <input type="password" id="repeat-new-password" placeholder="enter the new password again"
+                            autocomplete="new-password">
                     </div>
                     <span><i class="toggle-password fas fa-eye" onclick="togglePasswordVisibility()"
                             id="password-eye"></i></span>
@@ -130,7 +133,96 @@
                 <button type="submit" id="change-password">Change password</button>
                 <p id="warning-fields" style="display: none;"></p>
                 <label for="favorite-vehicles">Favorite Vehicles:</label>
-                <ul id="favorite-vehicles"></ul>
+                <ul id="favorite-vehicles">
+                    <li>
+                        <div class="car-card" bis_skin_checked="1">
+                            <div class="img-container" bis_skin_checked="1">
+                                <img src="images/Lambo-Urus.png" alt="Car 2">
+                            </div>
+                            <div class="car-info" bis_skin_checked="1">
+                                <h3>2022 LAMBORGHINI URUS PERFORMANTE</h3>
+                            </div>
+                            <div class="favorites" bis_skin_checked="1">
+                                <h3>Add to Favorites</h3>
+                                <label class="add-fav">
+                                    <input type="checkbox">
+                                    <i class="icon-heart fas fa-heart">
+                                        <i class="icon-plus-sign fa-solid fa-plus"></i>
+                                    </i>
+                                </label>
+                            </div>
+                            <a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/showroom.html?car=3D%20Models/Lamborghini-Urus-2020.glb"
+                                class="view-button">View in
+                                Showroom</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="car-card" bis_skin_checked="1">
+                            <div class="img-container" bis_skin_checked="1">
+                                <img src="images/Lamborghini-Gallardo.png" alt="Car 2">
+                            </div>
+                            <div class="car-info" bis_skin_checked="1">
+                                <h3>2007 LAMBORGHINI GALLARDO</h3>
+                            </div>
+                            <div class="favorites" bis_skin_checked="1">
+                                <h3>Add to Favorites</h3>
+                                <label class="add-fav">
+                                    <input type="checkbox">
+                                    <i class="icon-heart fas fa-heart">
+                                        <i class="icon-plus-sign fa-solid fa-plus"></i>
+                                    </i>
+                                </label>
+                            </div>
+                            <a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/showroom.html?car=3D%20Models/Lamborghini-Galardo-2007.glb"
+                                class="view-button">View in
+                                Showroom</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="car-card" bis_skin_checked="1">
+                            <div class="img-container" bis_skin_checked="1">
+                                <img src="images/BMW-X5.png" alt="Car 2">
+                            </div>
+                            <div class="car-info" bis_skin_checked="1">
+                                <h3>2022 BMW X5M COMPETITION</h3>
+                            </div>
+                            <div class="favorites" bis_skin_checked="1">
+                                <h3>Add to Favorites</h3>
+                                <label class="add-fav">
+                                    <input type="checkbox">
+                                    <i class="icon-heart fas fa-heart">
+                                        <i class="icon-plus-sign fa-solid fa-plus"></i>
+                                    </i>
+                                </label>
+                            </div>
+                            <a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/showroom.html?car=3D%20Models/BMW-X5.glb"
+                                class="view-button">View in
+                                Showroom</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="car-card" bis_skin_checked="1">
+                            <div class="img-container" bis_skin_checked="1">
+                                <img src="images/Mclaren P1.png" alt="Car 2">
+                            </div>
+                            <div class="car-info" bis_skin_checked="1">
+                                <h3>2015 MCLAREN P1</h3>
+                            </div>
+                            <div class="favorites" bis_skin_checked="1">
+                                <h3>Add to Favorites</h3>
+                                <label class="add-fav">
+                                    <input type="checkbox">
+                                    <i class="icon-heart fas fa-heart">
+                                        <i class="icon-plus-sign fa-solid fa-plus"></i>
+                                    </i>
+                                </label>
+                            </div>
+                            <a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/showroom.html?car=3D%20Models/Mclaren-P1-2020.glb"
+                                class="view-button">View in
+                                Showroom</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
