--- a/public/profile.html
+++ b/public/profile.html
@@ -100,13 +100,13 @@
             <h2>Profile</h2>
             <br>
             <div class="profile-info">
-                <label for="username">Username:</label>
+                <label for="username">Username</label>
                 <div id="username-container">
                     <input type="text" id="username" value="" autocomplete="new-username">
                     <button type="submit" id="change-username" style="display: none;">Save</button>
                     <button type="submit" id="cancel" style="display: none;">Cancel</button>
                 </div>
-                <label for="email">Email:</label>
+                <label for="email">Email</label>
                 <div id="email-container">
                     <input type="email" id="email" value="" autocomplete="new-email">
                     <button type="submit" id="change-email" style="display: none;">Save</button>
@@ -115,7 +115,7 @@
                 <span id="changed-email"></span>
                 <div class="profile-password">
                     <div>
-                        <label for="password">Change Password:</label>
+                        <label for="password">Change Password</label>
                         <input type="password" id="password" value="" placeholder="enter current password"
                             autocomplete="new-password">
                         <input type="password" id="new-password" placeholder="enter a new password"
@@ -132,7 +132,7 @@
                 </div>
                 <button type="submit" id="change-password">Change password</button>
                 <p id="warning-fields" style="display: none;"></p>
-                <label for="favorite-vehicles">Favorite Vehicles:</label>
+                <label for="favorite-vehicles">Favorite Vehicles</label>
                 <ul id="favorite-vehicles"></ul>
             </div>
         </div>
