--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -50,7 +50,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                    <li style="display: none;" id="profile"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html"><i
+                    <li style="display: none;" id="profile"><a
+                            href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html"><i
                                 class="fas fa-user"></i></a></li>
                     <li><a href="auto-show.html"><i class="fas fa-car"></i></a></li>
                     <li id="log-in-icon"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/login"><i
@@ -63,7 +64,8 @@
             <nav>
                 <ul id="nav-text">
                     <li><a href="index.html">Home</a></li>
-                    <li style="display: none;" id="profile"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html">Profile</a></li>
+                    <li style="display: none;" id="profile"><a
+                            href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html">Profile</a></li>
                     <li class="auto-show"><a href="auto-show.html">Auto Show</a></li>
                     <li id="log-in-text"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/login">Log in</a>
                     </li>
@@ -75,21 +77,27 @@
     </header>
     <script src="mobile-menu.js"></script>
     <div id="loader"></div>
-    <h1 id="vehicle-spec">↓ Vehicle Specifications ↓</h1>
-    <table id="cars-data-container">
-        <tbody id="outside-wrapper">
-            <tr class="cars-data">
-            </tr>
-        </tbody>
-    </table>
-    <h1 id="vehicle-equip">↓ Vehicle Equipment ↓</h1>
-    <table id="cars-data-container">
-        <tbody id="outside-wrapper-equipment">
-            <tr class="cars-equipment">
-            </tr>
-        </tbody>
-    </table>
-    <br>
+    <div id="cars-data-wrapper">
+        <div>
+            <h1 id="vehicle-spec">↓ Vehicle Specifications ↓</h1>
+            <table id="cars-data-container">
+                <tbody id="outside-wrapper">
+                    <tr class="cars-data">
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <h1 id="vehicle-equip">↓ Vehicle Equipment ↓</h1>
+            <table id="cars-data-container">
+                <tbody id="outside-wrapper-equipment">
+                    <tr class="cars-equipment">
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+        </div>
+    </div>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
