--- a/public/profile.html
+++ b/public/profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta property="og:image" content="images/logo.png">
     <link rel="stylesheet" href="profile-page.css">
-    <link rel="stylesheet" href="auto-show-page.css">
+    <link rel="stylesheet" href="auto-show.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
