--- a/public/index.html
+++ b/public/index.html
@@ -39,13 +39,13 @@
                             class="fas fa-home"></i>
                         Home</a></li>
                 <li style="display: none;" id="profile"><a class="menuItem"
-                        href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html"
+                        href="https://danov-autoshow-656625355b99.herokuapp.com/profile.html"
                         onclick="setHamburgerRelative(event)"><i class="fas fa-user"></i>Profile</a></li>
                 <li><a class="menuItem" href="auto-show.html" onclick="setHamburgerRelative(event)"><i
                             class="fas fa-car"></i>
                         Auto
                         Show</a></li>
-                <li id="log-in-text"><a class="menuItem" href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/login"
+                <li id="log-in-text"><a class="menuItem" href="https://danov-autoshow-656625355b99.herokuapp.com/login"
                         onclick="setHamburgerRelative(event)"><i class="fas fa-sign-in-alt"></i>Log in</a></li>
                 <li style="display: none;" id="log-out-text"><a class="menuItem" href="#"
                         onclick="setHamburgerRelative(event)"><i class="fas fa-sign-in-alt"></i>Log out</a></li>
@@ -57,10 +57,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                    <li style="display: none;" id="profile"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html"><i
+                    <li style="display: none;" id="profile"><a
+                            href="https://danov-autoshow-656625355b99.herokuapp.com/profile.html"><i
                                 class="fas fa-user"></i></a></li>
                     <li><a href="auto-show.html"><i class="fas fa-car"></i></a></li>
-                    <li id="log-in-icon"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/login"><i
+                    <li id="log-in-icon"><a href="https://danov-autoshow-656625355b99.herokuapp.com/login"><i
                                 class="fas fa-sign-in-alt"></i></a></li>
                     <li style="display: none;" id="log-out-icon"><a href="#"><i class="fas fa-sign-out-alt"></i></a>
                     </li>
@@ -70,9 +71,10 @@
             <nav>
                 <ul id="nav-text">
                     <li><a href="index.html">Home</a></li>
-                    <li style="display: none;" id="profile"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/profile.html">Profile</a></li>
+                    <li style="display: none;" id="profile"><a
+                            href="https://danov-autoshow-656625355b99.herokuapp.com/profile.html">Profile</a></li>
                     <li class="auto-show"><a href="auto-show.html">Auto Show</a></li>
-                    <li id="log-in-text"><a href="https://danovs-autoshow-afcbab0f302b.herokuapp.com/login">Log in</a>
+                    <li id="log-in-text"><a href="https://danov-autoshow-656625355b99.herokuapp.com/login">Log in</a>
                     </li>
                     <li style="display: none;" id="log-out-text"><a href="#">Log out</a></li>
                     <li><a href="#">About</a></li>
