--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -310,7 +310,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="User-Authentication-Autoshow.js"></script>
+    <script src="User Authentication Autoshow.js"></script>
     <script src="Order-Car-Menu.js"></script>
     <script src="Populate-CarsMenu.js"></script>
 </body>
