--- a/public/cars-info.html
+++ b/public/cars-info.html
@@ -119,7 +119,7 @@
         </div>
     </footer>
     <script src="Cars-Data.js"></script>
-    <script src="User-Authentication.js"></script>
+    <script src="User Authentication.js"></script>
 </body>
 
 </html>
