--- a/public/profile.html
+++ b/public/profile.html
@@ -156,7 +156,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script src="getProfileData.js" defer></script>
+    <script src="Get-Profile-Data.js" defer></script>
     <script src="Password-Changing.js" defer></script>
     <script src="Password-Eye-Visibility.js" defer></script>
     <script src="Change-User-Details.js" defer></script>
