--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="preload" as="image" href="images/BMW-M8.webp">
     <meta property="og:image" content="images/logo.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="User-Authentication.js"></script>
+    <script src="User Authentication.js"></script>
 </head>
 
 <body>
