--- a/public/showroom.html
+++ b/public/showroom.html
@@ -115,7 +115,7 @@
         </div>
     </footer>
     <script type="module" src="3DModel-Scene-Switching.js"></script>
-    <script src="User-Authentication.js"></script>
+    <script src="User Authentication.js"></script>
 </body>
 
 </html>
