Added car orders feature in the profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -134,6 +134,8 @@
                 <p id="warning-fields" style="display: none;"></p>
                 <label for="favorite-vehicles">Favorite Vehicles</label>
                 <ul id="favorite-vehicles"></ul>
+                <label for="car-orders">Ordered Vehicles</label>
+                <ul id="car-orders"></ul>
             </div>
         </div>
     </section>
