--- a/public/profile.html
+++ b/public/profile.html
@@ -135,58 +135,7 @@
                 <label for="favorite-vehicles">Favorite Vehicles</label>
                 <ul id="favorite-vehicles"></ul>
                 <label for="car-orders">Ordered Vehicles</label>
-                <ul id="car-orders">
-                    <li>
-                        <div class="car-orders-container" bis_skin_checked="1">
-                            <div class="car-order-details" bis_skin_checked="1">
-                                <div bis_skin_checked="1">
-                                    <span>Car manufacturer</span>
-                                    <p>Bmw</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Car model</span>
-                                    <p>M5</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Manufacture year</span>
-                                    <p>2015</p>
-                                </div>
-                            </div>
-                            <div class="car-order-status" bis_skin_checked="1">
-                                <div bis_skin_checked="1">
-                                    <span>Order status</span>
-                                    <p class="order-status">Pending</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Order date</span>
-                                    <p>2024-01-05</p>
-                                </div>
-                            </div>
-                            <div class="car-order-model" style="display: flex;" bis_skin_checked="1">
-                                <h1>Ordered car</h1>
-                                <div class="car-card" bis_skin_checked="1">
-                                    <div class="img-container" bis_skin_checked="1">
-                                        <img src="images/Bmw-M5.png" alt="Car 2">
-                                    </div>
-                                    <div class="car-info" bis_skin_checked="1">
-                                        <h3>2015 BMW M5</h3>
-                                    </div>
-                                    <div class="favorites" bis_skin_checked="1">
-                                        <h3>Add to Favorites</h3>
-                                        <label class="add-fav">
-                                            <input type="checkbox">
-                                            <i class="icon-heart fas fa-heart">
-                                                <i class="icon-plus-sign fa-solid fa-plus"></i>
-                                            </i>
-                                        </label>
-                                    </div>
-                                    <a href="showroom.html?car=3D Models/Bmw-M5-2015.glb" class="view-button">View in
-                                        Showroom</a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                <ul id="car-orders"></ul>
             </div>
         </div>
     </section>
