--- a/public/profile.html
+++ b/public/profile.html
@@ -135,60 +135,7 @@
                 <label for="favorite-vehicles">Favorite Vehicles</label>
                 <ul id="favorite-vehicles"></ul>
                 <label for="car-orders">Ordered Vehicles</label>
-                <ul id="car-orders">
-                    <li>
-                        <div class="car-orders-container" bis_skin_checked="1">
-                            <div class="car-order-details" bis_skin_checked="1">
-                                <div bis_skin_checked="1">
-                                    <span>Car manufacturer</span>
-                                    <p>BMW</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Car model</span>
-                                    <p>m5</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Manufacture year</span>
-                                    <p>2020</p>
-                                </div>
-                            </div>
-                            <div class="car-order-status" bis_skin_checked="1">
-                                <div bis_skin_checked="1">
-                                    <span>Order status</span>
-                                    <p class="order-status" status="Pending">Pending</p>
-                                </div>
-                                <div bis_skin_checked="1">
-                                    <span>Order date</span>
-                                    <p>2024-01-03</p>
-                                </div>
-                            </div>
-                            <div class="car-order-model">
-                                <div class="car-card">
-                                    <div class="img-container">
-                                        <img src="images/Mclaren P1.png" alt="Car 2">
-                                    </div>
-                                    <div class="car-info">
-                                        <h3>2015 MCLAREN P1</h3>
-                                    </div>
-                                    <div class="favorites">
-                                        <h3>Add to Favorites</h3>
-                                        <label class="add-fav">
-                                            <input type="checkbox" />
-                                            <i class="icon-heart fas fa-heart">
-                                                <i class="icon-plus-sign fa-solid fa-plus"></i>
-                                            </i>
-                                        </label>
-                                    </div>
-                                    <a href="showroom.html?car=3D Models/Mclaren-P1-2020.glb" class="view-button">View
-                                        in Showroom</a>
-                                </div>
-                            </div>
-                            <div id="cancel-order-container">
-                                <button id="cancel-order">Cancel Order</button>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                <ul id="car-orders"></ul>
             </div>
         </div>
     </section>
