--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -285,7 +285,7 @@
                             </i>
                         </label>
                     </div>
-                    <a href="showroom.html?car=3D Models/Tesla-Model-3-2020.glb" class="view-button">View in
+                    <a href="showroom.html?car=3D Models/Audi-R8-2020.glb" class="view-button">View in
                         Showroom</a>
                 </div>
             </div>
