--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -90,16 +90,19 @@
 
                     <label for="car-manufacturer">Select car manufacturer</label>
                     <select id="car-manufacturer" required>
+                        <option value="loading" id="loading-manufacturers">Loading</option>
                     </select>
                     <span class="error-message" id="error-car-manufacturer" style="display: none;">This field is required</span>
                     
                     <label for="car-model">Select car model</label>
                     <select id="car-model" required>
+                        <option value="loading" id="loading-models">Loading</option>
                     </select>
                     <span class="error-message" id="error-car-model" style="display: none;">This field is required</span>
                     
                     <label for="car-year">Select manufacture year</label>
                     <select id="car-year" required>
+                        <option value="loading" id="loading-years">Loading</option>
                     </select>
                     <span class="error-message" id="error-car-year" style="display: none;">This field is required</span>
 
@@ -285,7 +288,7 @@
                             </i>
                         </label>
                     </div>
-                    <a href="showroom.html?car=3D Models/Audi-R8-2020.glb" class="view-button">View in
+                    <a href="showroom.html?car=3D Models/Tesla-Model-3-2020.glb" class="view-button">View in
                         Showroom</a>
                 </div>
             </div>
