Added close icon for the order menu

--- a/public/auto-show.html
+++ b/public/auto-show.html
@@ -86,6 +86,7 @@
             <div id="order-car-container">Order Car</div>
             <div id="order-car-menu">
                 <div id="popup-order-car">
+                    <i class="fas fa-window-close"></i>
                     <p>Can't find a car you wanna see ? Make a order here.</p>
 
                     <label for="car-manufacturer">Select car manufacturer</label>
