--- a/public/profile.html
+++ b/public/profile.html
@@ -139,7 +139,7 @@
                 <div id="order-car-menu">
                     <div id="popup-order-car">
                         <i class="fas fa-window-close"></i>
-                        <p>Can't find a car you wanna see ? Make a order here.</p>
+                        <p>Remake your order here.</p>
 
                         <label for="car-manufacturer">Select car manufacturer</label>
                         <select id="car-manufacturer" required>
@@ -153,8 +153,8 @@
                         <span id="response-result" style="display: none;"></span>
 
                         <div>
-                            <button onclick="orderCar()">Order car</button>
-                            <button onclick="noThanks()">Cancel</button>
+                            <button onclick="remakeOrder()">Order car</button>
+                            <button onclick="cancel()">Cancel</button>
                         </div>
                     </div>
                 </div>
@@ -185,6 +185,7 @@
     <script src="Password-Eye-Visibility.js" defer></script>
     <script src="Change-User-Details.js" defer></script>
     <script src="Change-User-Password.js" defer></script>
+    <script src="Populate-CarsMenu.js" defer></script>
 </body>
 
 </html>
