--- a/public/profile.html
+++ b/public/profile.html
@@ -154,7 +154,7 @@
 
                         <div>
                             <button onclick="remakeOrder()">Order car</button>
-                            <button onclick="cancel()">Cancel</button>
+                            <button onclick="cancelRemakeOrder()">Cancel</button>
                         </div>
                     </div>
                 </div>
