Implemented the backend logic for modifying orders

--- a/public/profile.html
+++ b/public/profile.html
@@ -139,8 +139,7 @@
                 <div id="order-car-menu">
                     <div id="popup-order-car">
                         <i class="fas fa-window-close"></i>
-                        <p>Remake your order here.</p>
-
+                        <p>Reorder the same car, or choose a different one.</p>
                         <label for="car-manufacturer">Select car manufacturer</label>
                         <select id="car-manufacturer" required>
                         </select>
@@ -153,7 +152,7 @@
                         <span id="response-result" style="display: none;"></span>
 
                         <div>
-                            <button onclick="remakeOrder()">Order car</button>
+                            <button id="reorder-car">Order car</button>
                             <button onclick="cancelRemakeOrder()">Cancel</button>
                         </div>
                     </div>
