--- a/public/profile.html
+++ b/public/profile.html
@@ -153,7 +153,7 @@
 
                         <div>
                             <button id="reorder-car">Order car</button>
-                            <button id="cancel-order">Cancel</button>
+                            <button id="cancel-orderbtn">Cancel</button>
                         </div>
                     </div>
                 </div>
