--- a/public/profile.html
+++ b/public/profile.html
@@ -139,7 +139,7 @@
                 <div id="order-car-menu">
                     <div id="popup-order-car">
                         <i class="fas fa-window-close" id="cancel-order-icon" style="cursor: pointer;"></i>
-                        <p>Reorder the same car, or choose a different one.</p>
+                        <p id="order-car-menu-header">Reorder the same car, or choose a different one.</p>
                         <label for="car-manufacturer">Select car manufacturer</label>
                         <select id="car-manufacturer" required>
                         </select>
@@ -150,7 +150,6 @@
                         <select id="car-year" required>
                         </select>
                         <span id="response-result" style="display: none;"></span>
-
                         <div>
                             <button id="reorder-car">Order car</button>
                             <button id="cancel-orderbtn">Cancel</button>
